@@ -1,3 +1,4 @@
+2023-08-02: [FEATURE] Fix decorations to work with wlroots0.16 update in qtile
 2023-04-09: [BUGFIX] Fix menus in `StatusNotifier` for updated electron apps
 2023-01-13: [FEATURE] Add support for local icons in `StatusNotifier` context menus
 2023-01-03: [FEATURE] Add `PopupCircularProgress` control to popup toolkit
